<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pin_code_first_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.ce.game.screenlocker.view.KeyboardButtonView
                android:id="@+id/pin_code_button_1"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:lp_keyboard_button_text="@string/button1_large_text"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.ce.game.screenlocker.view.KeyboardButtonView
                android:id="@+id/pin_code_button_2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:lp_keyboard_button_text="@string/button2_large_text"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.ce.game.screenlocker.view.KeyboardButtonView
                android:id="@+id/pin_code_button_3"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:lp_keyboard_button_text="@string/button3_large_text"/>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pin_code_second_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pin_code_first_row"
        android:orientation="horizontal"
        android:weightSum="3">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.ce.game.screenlocker.view.KeyboardButtonView

                android:id="@+id/pin_code_button_4"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:lp_keyboard_button_text="@string/button4_large_text"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.ce.game.screenlocker.view.KeyboardButtonView
                android:id="@+id/pin_code_button_5"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:lp_keyboard_button_text="@string/button5_large_text"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.ce.game.screenlocker.view.KeyboardButtonView
                android:id="@+id/pin_code_button_6"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:lp_keyboard_button_text="@string/button6_large_text"/>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pin_code_third_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pin_code_second_row"
        android:orientation="horizontal"
        android:weightSum="3">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.ce.game.screenlocker.view.KeyboardButtonView
                android:id="@+id/pin_code_button_7"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:lp_keyboard_button_text="@string/button7_large_text"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.ce.game.screenlocker.view.KeyboardButtonView
                android:id="@+id/pin_code_button_8"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:lp_keyboard_button_text="@string/button8_large_text"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.ce.game.screenlocker.view.KeyboardButtonView
                android:id="@+id/pin_code_button_9"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:lp_keyboard_button_text="@string/button9_large_text"/>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pin_code_fourth_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pin_code_third_row"
        android:orientation="horizontal"
        android:weightSum="3">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <com.ce.game.screenlocker.view.KeyboardButtonView
                android:id="@+id/pin_code_button_10"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                app:lp_keyboard_button_image="@drawable/unlockscreen_icon_return"
                />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.ce.game.screenlocker.view.KeyboardButtonView
                android:id="@+id/pin_code_button_0"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:lp_keyboard_button_text="@string/button11_large_text"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <com.ce.game.screenlocker.view.KeyboardButtonView
                android:id="@+id/pin_code_button_clear"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:lp_keyboard_button_image="@drawable/unlockscreen_icon_delete"
                />
        </FrameLayout>

    </LinearLayout>

</RelativeLayout>